--- a/apps/core/templates/core/library_update.html
+++ b/apps/core/templates/core/library_update.html
@@ -6,11 +6,11 @@ Edit Library
 {% endblock %}
 
 {% block body %}
-<div class="container" style="background-color:#F5F5F5;">
+<div class="container graybg">
     <form action="{% url 'core:library_update' pk=pk %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <fieldset>
-            <legend style="color:#5D4037">Library Information</legend>
+            <legend>Library Information</legend>
             <table class="table-condensed">
                 <thead>
                 <!-- {{form}} -->
@@ -53,25 +53,7 @@ Edit Library
             </table>
          </fieldset><br>
          <fieldset>
-            <legend style="color:#5D4037">Sublibrary Information</legend>
-            <i>Select a SmartChipApp result file to upload:</i>
-            <table class="table-condensed">
-                <thead>
-                {{sublib_form}}
-                <!-- {{sublib_formset}} -->
-                </thead>
-            </table>
-         </fieldset><br>
-         <fieldset>
-            <legend style="color:#5D4037">Library Sample Details</legend>
-            <table class="table-condensed">
-                <thead>
-                {{libdetail_formset}}
-                </thead>
-            </table>
-         </fieldset><br>
-         <fieldset>
-            <legend style="color:#5D4037">Library Construction Information</legend>
+            <legend>Library Construction Information</legend>
             <table class="table-condensed">
                 <thead>
                 {{libcons_formset}}
@@ -79,7 +61,7 @@ Edit Library
             </table>
          </fieldset><br>
          <fieldset>
-            <legend style="color:#5D4037">Library Quantification and Storage</legend>
+            <legend>Library Quantification and Storage</legend>
             <table class="table-condensed">
                 <thead>
                 {{libqs_formset}}
