--- a/apps/core/templates/core/project_delete.html
+++ b/apps/core/templates/core/project_delete.html
@@ -12,6 +12,6 @@ Delete project
     	{% csrf_token %}
         <input class="btn btn-danger btn-sm" type="submit" name="delete" value="Yes, I'm sure">
         <a class="btn btn-default btn-sm" href="{% url 'core:project_list' %}">Cancel</a>
-    </form>
+    </form><br>
 </div>
 {% endblock %}
