added sequencing submission_date to sequencing_list page and "sequencing information" section of library_details page.

--- a/apps/core/templates/core/library_detail.html
+++ b/apps/core/templates/core/library_detail.html
@@ -123,6 +123,7 @@ Library Details
                     <th>Pool ID</th>
                     <th>Adapter</th>
                     <th>Sequencing instrument</th>
+                    <th>Submission date</th>
                 </tr>
             </thead>
             <tbody>
@@ -132,6 +133,7 @@ Library Details
                     <td>{{sequencing.library.pool_id}}</td>
                     <td>{{sequencing.adapter}}</td>
                     <td>{{sequencing.sequencing_instrument}}</td>
+                    <td>{{sequencing.submission_date}}</td>
                 </tr>
                 {% endfor %}
             </tbody>
