--- a/templates/template_samplesheet.html
+++ b/templates/template_samplesheet.html
@@ -1,19 +1,19 @@
-[Header],,,,,,,,,
-IEMFileVersion,4,,,,,,,,
-Investigator Name,${sequencing_instrument},,,,,,,,
-Experiment Name,${flow_cell_id},,,,,,,,
-Date,${submission_date},,,,,,,,
-Workflow,GenerateFASTQ,,,,,,,,
-Application,NextSeq FASTQ Only,,,,,,,,
-Assay,Nextera,,,,,,,,
-Description,${pool_id},,,,,,,,
-Chemistry,Amplicon,,,,,,,,
-,,,,,,,,,
-[Reads],,,,,,,,,
-${read1_length},,,,,,,,,
-${read2_length},,,,,,,,,
-,,,,,,,,,
-[Settings],,,,,,,,,
-Adapter,CTGTCTCTTATACACATCT,,,,,,,,
-,,,,,,,,,
-[Data],,,,,,,,,
+[Header]
+IEMFileVersion,4
+Investigator Name,${sequencing_instrument}
+Experiment Name,${flow_cell_id}
+Date,${submission_date}
+Workflow,GenerateFASTQ
+Application,NextSeq FASTQ Only
+Assay,Nextera
+Description,${pool_id}
+Chemistry,Amplicon
+
+[Reads]
+${read1_length}
+${read2_length}
+
+[Settings]
+Adapter,CTGTCTCTTATACACATCT
+
+[Data]
