Changed "Pool ID" to "Chip ID" as requested by jbiele in KRONOS-47.

--- a/apps/core/templates/core/library_detail.html
+++ b/apps/core/templates/core/library_detail.html
@@ -120,7 +120,7 @@ Library Details
             <thead>
                 <tr>
                     <th>Sample ID</th>
-                    <th>Pool ID</th>
+                    <th>Chip ID</th>
                     <th>Adapter</th>
                     <th>Sequencing instrument</th>
                     <th>Submission date</th>
