--- a/apps/core/templates/core/library_list.html
+++ b/apps/core/templates/core/library_list.html
@@ -16,7 +16,7 @@ List of Libraries
             <thead>
                 <tr>
                     <th>Sample ID</th>
-                    <th>Pool ID</th>
+                    <th>Chip ID</th>
                     <th>JIRA Ticket</th>
                     <th>Project</th>
                     <th>#Sublibraries</th>
