--- a/apps/core/templates/core/sample_detail.html
+++ b/apps/core/templates/core/sample_detail.html
@@ -45,7 +45,7 @@ Sample Details
         <table class="table">
             <thead>
                 <tr>
-                    <th>Pool ID</th>
+                    <th>Chip ID</th>
                     <th>JIRA Ticket</th>
                     <th>Description</th>
                 </tr>
