--- a/apps/core/templates/core/library_update.html
+++ b/apps/core/templates/core/library_update.html
@@ -76,7 +76,7 @@ Edit Library
             </table>
          </fieldset><br>
         <input class="btn btn-primary btn-sm" type="submit" name="update" value="Update">
-        <a class="btn btn-default btn-sm" href="{% url 'core:library_list' %}">Cancel</a>
+        <a class="btn btn-default btn-sm" href="{% url 'core:library_detail' pk=pk %}">Cancel</a>
     </form><br>
 </div>
 {% endblock %}
