added "Agilent bioanalyzer xad file" and "Agilent bioanalyzer png file" to the "Library Quantification and Storage" section where user can upload this files to store on the server.

--- a/apps/core/templates/core/library_detail.html
+++ b/apps/core/templates/core/library_detail.html
@@ -68,8 +68,24 @@ Library Details
     <table class="table-condensed">
         {% for field, value in library.libraryquantificationandstorage.get_field_values.items %}
         <tr>
+            {% if field == "Agilent bioanalyzer xad file" and value %}
+            <th id="thid">{{field}}:</th>
+            <td id="tdid">
+                <a href="{{library.libraryquantificationandstorage.agilent_bioanalyzer_xad.url}}">
+                    {{value}}
+                </a>
+            </td>
+            {% elif field == "Agilent bioanalyzer png file" and value %}
+            <th id="thid">{{field}}:</th>
+            <td id="tdid">
+                <a href="{{library.libraryquantificationandstorage.agilent_bioanalyzer_png.url}}">
+                    {{value}}
+                </a>
+            </td>
+            {% else %}
             <th id="thid">{{field}}:</th>
             <td id="tdid">{{value}}</td>
+            {% endif %}
         </tr>
         {% endfor %}
     </table>
