refactored library_update view to class-based.

--- a/apps/core/templates/core/library_update.html
+++ b/apps/core/templates/core/library_update.html
@@ -13,7 +13,7 @@ Edit Library
             <legend>Library Information</legend>
             <table class="table-condensed">
                 <thead>
-                {% for field in form %} 
+                {% for field in lib_form %}
                 <tr>
                     <th>
                     {{field.label_tag}}
