added "Relates to" field for libraries and sequencings.

--- a/apps/core/templates/core/library_create_from_sample.html
+++ b/apps/core/templates/core/library_create_from_sample.html
@@ -30,6 +30,12 @@ Create Library
                         <select id="id_sample" name="sample">
                             <option value="{{sample_id}}" selected="selected">{{sample}}</option>
                         </select>
+                    {% elif field.name == "relates_to" %}
+                        <select class="selectpicker" id="id_relates_to" name="relates_to" multiple data-none-selected-text="--------">
+                            {% for lib in related_libs %}
+                            <option value={{lib.id}}>{{lib}}</option>
+                            {% endfor %}
+                        </select>
                     {% else %}
                         {{ field }}
                     {% endif %}
