--- a/apps/core/templates/core/library_detail.html
+++ b/apps/core/templates/core/library_detail.html
@@ -21,6 +21,15 @@ Library Details
         <tr>
             <th id="thid">Project:</th>
             <td id="tdid" class="notes">{{library.projects.all|join:", "}}</td>
+        </tr>
+        <tr>
+            <th id="thid">Relates to:</th>
+            <td id="tdid">
+            {% for lib in library.relates_to.only %}
+                <a href="{{lib.get_absolute_url}}">{{lib}}</a><br>
+            {% endfor %}
+            </td>
+        </tr>
     </table>
 </div><br>
 <!-- end of Meta Information -->
