--- a/apps/core/templates/core/library_create.html
+++ b/apps/core/templates/core/library_create.html
@@ -26,6 +26,12 @@ Create Library
                             <option>{{project}}</option>
                             {% endfor %}
                         </select>
+                    {% elif field.name == "relates_to" %}
+                        <select class="selectpicker" id="id_relates_to" name="relates_to" multiple data-none-selected-text="--------">
+                            {% for lib in related_libs %}
+                            <option value={{lib.id}}>{{lib}}</option>
+                            {% endfor %}
+                        </select>
                     {% else %}
                         {{ field }}
                     {% endif %}
