--- a/apps/core/templates/core/library_list.html
+++ b/apps/core/templates/core/library_list.html
@@ -17,6 +17,7 @@ List of Libraries
                 <tr>
                     <th>Sample ID</th>
                     <th>Chip ID</th>
+                    <th>Description</th>
                     <th>JIRA Ticket</th>
                     <th>Project</th>
                     <th>#Sublibraries</th>
@@ -29,6 +30,7 @@ List of Libraries
                 <tr>
                     <td><a href="{% url 'core:library_detail' pk=library.pk %}">{{library.sample.sample_id}}</a></td>
                     <td>{{library.pool_id}}</td>
+                    <td>{{library.description}}</td>
                     <td><a href="https://www.bcgsc.ca/jira/browse/{{library.jira_ticket}}">{{library.jira_ticket}}</a></td>
                     <td>
                         {% for project in library.projects.all %}
