added will, will not, and sequenced status to the "Sequenced" column in Library list page.

--- a/apps/core/templates/core/library_list.html
+++ b/apps/core/templates/core/library_list.html
@@ -38,10 +38,14 @@ List of Libraries
                         {% endfor %}
                     </td>
                     <td style="text-align:center;">{{library.num_sublibraries}}</td>
-                    {% if library.sequencing_set.all %}
+                    {% if library.is_sequenced %}
                     <td style="text-align:center;"><i class="fa fa-check" aria-hidden="true" style="color:green;"></i></td>
+                    {% elif library.libraryquantificationandstorage.qc_check == 'P' %}
+                    <td style="text-align:center"><i class="fa fa-exclamation-triangle" aria-hidden="true" style="color:orange"></td>
+                    {% elif library.libraryquantificationandstorage.qc_check == 'N' %}
+                    <td style="text-align:center"><i class="fa fa-times" aria-hidden="true" style="color:red"></td>
                     {% else %}
-                    <td style="text-align:center;"><i class="fa fa-times" aria-hidden="true" style="color:red;"></i></td>
+                    <td style="text-align:center"></td>
                     {% endif %}
 <!--                     <td>
                         <p style="float:right;"><a style="margin-right:2px;" href="{% url 'core:library_update' pk=library.pk %}"><i class="fa fa-pencil" aria-hidden="true" style="color:orange;" "></i> edit</a>
