added sortable datatables, KRONOS-47.

--- a/apps/core/templates/core/library_detail.html
+++ b/apps/core/templates/core/library_detail.html
@@ -112,8 +112,8 @@ Library Details
 <div class="container">
     <h4>Sublibrary Information</h4>
     {% if library.sublibraryinformation_set.all %}
-    <div class="table-responsive" style="text-align:center;">
-        <table class="table-striped table-bordered">
+    <div class="table-responsive">
+        <table id="datatable" class="table-striped table-bordered" style="text-align:center;">
             <thead>
                 <tr>
                     <th>Sublibrary ID</th>
