--- a/apps/core/templates/core/library_list.html
+++ b/apps/core/templates/core/library_list.html
@@ -12,7 +12,7 @@ List of Libraries
 </div>
 <div class="container" style="background-color:#F5F5F5;">
     <div class="table-responsive">
-        <table class="table table-striped">
+        <table id="datatable" class="table table-striped">
             <thead>
                 <tr>
                     <th>Sample ID</th>
@@ -22,7 +22,6 @@ List of Libraries
                     <th>Project</th>
                     <th>#Sublibraries</th>
                     <th>Sequenced</th>
-                    <th></th>                    
                 </tr>
             </thead>
             <tbody>
